--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Polygon</title>
+        <title>Asteroids</title>
     </head>
     <body>
         <canvas id="canvas"></canvas>
