Add user interaction to particle example

--- a/examples/www/03-particles.html
+++ b/examples/www/03-particles.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Asteroid Field</title>
+        <title>Particles</title>
     </head>
     <body>
         <canvas id="canvas"></canvas>
@@ -10,10 +10,12 @@
 
 import init, { Particles } from './wasm/examples.js';
 import createScreen from './screen.js';
+import { addBrushListener, removeBrushListener } from './brush.js';
 
 let screen;
 let app;
 let time;
+let brush;
 
 async function main() {
     const wasm = await init();
@@ -23,6 +25,8 @@ async function main() {
 
     screen.draw(app.render());
     requestAnimationFrame(loop);
+
+    addBrushListener(document.querySelector('#canvas'), onBrush);
 }
 
 function loop() {
@@ -30,7 +34,31 @@ function loop() {
     app.step((now - time) / 1000);
     time = now;
     screen.draw(app.render());
+    drawOverlay();
     requestAnimationFrame(loop);
+}
+
+function onBrush(nextBrush) {
+    if (nextBrush.phase === 'end') {
+        app.burst(brush.initialX, brush.initialY, -brush.extentX, -brush.extentY);
+        brush = null;
+    } else {
+        brush = nextBrush;
+    }
+}
+
+function drawOverlay() {
+    if (!brush) {
+        return;
+    }
+    let context = document.querySelector('#canvas').getContext('2d');
+    context.save();
+    context.globalAlpha = 0.2;
+    context.beginPath();
+    context.moveTo(brush.initialX, brush.initialY);
+    context.lineTo(brush.initialX + brush.extentX, brush.initialY + brush.extentY);
+    context.stroke();
+    context.restore();
 }
 
 main();
