Update colliding example with 24 variations

--- a/examples/www/07-colliding.html
+++ b/examples/www/07-colliding.html
@@ -23,6 +23,12 @@ async function main() {
 
     screen.draw(app.render());
     requestAnimationFrame(loop);
+
+    document.querySelector('#canvas').addEventListener('pointerdown', handlePointerDown);
+}
+
+function handlePointerDown() {
+    app.next();
 }
 
 function loop() {
