Tweak glow effect; display effect only if browser supports canvas filter

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -15,13 +15,12 @@ body {
     justify-content: center;
     align-items: center;
 }
-#canvas {
+canvas {
     background: radial-gradient(farthest-corner circle at center, #21272D, #17191B);
 }
         </style>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
         <script src="main.js" type="module"></script>
     </body>
 </html>
