Update SVG version with playback scrubbing

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -14,17 +14,15 @@ html, body {
     font-size: 20px;
     line-height: 20px;
 }
-body {
+body, main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 14px;
 }
 main {
     visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 canvas {
     background: radial-gradient(farthest-corner circle at center, #21272D, #17191B);
