--- a/app/www/svg/index.html
+++ b/app/www/svg/index.html
@@ -10,15 +10,14 @@ html, body {
     height: 100%;
     background: #000000;
 }
-body {
+body, main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+input {
+    width: 100%;
 }
 svg {
     background: radial-gradient(farthest-corner circle at center, #21272D, #17191B);
@@ -27,7 +26,9 @@ svg {
         </style>
     </head>
     <body>
-        <main></main>
+        <main>
+            <input type="range">
+        </main>
         <script src="main.js" type="module"></script>
     </body>
 </html>
