--- a/app/www/index.html
+++ b/app/www/index.html
@@ -9,7 +9,7 @@ html, body {
     padding: 0;
     height: 100%;
     background: #000000;
-    color: #555555;
+    color: #4F5458;
     font-family: Menlo, Consolas, monospace;
     font-size: 20px;
     line-height: 20px;
@@ -45,8 +45,8 @@ span {
     padding: calc(0.25rem - 2px) 0.5rem;
     text-align: center;
     box-sizing: border-box;
-    border: 1.5px solid #333333;
-    border-radius: 3px;
+    border: 1.5px solid #2F3133;
+    border-radius: 4px;
 }
         </style>
     </head>
