--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ canvas {
     opacity: 0;
     transition: opacity 2s ease-out;
 }
+canvas.flat {
+    background: #1C2024;
+}
 .instructions {
     margin-top: 1rem;
     display: grid;
