--- a/app/www/index.html
+++ b/app/www/index.html
@@ -7,7 +7,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
+    overflow-y: hidden;
     background: #000000;
     color: #4F5458;
     font-family: Menlo, Consolas, monospace;
@@ -19,12 +20,17 @@ body, main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: calc(27rem + 5rem);
     font-size: 14px;
 }
 main {
     visibility: hidden;
 }
 canvas {
+    max-width: 100vw;
+    max-height: calc(100vh - 5rem);
+    min-width: 36rem;
+    min-height: 27rem;
     background: radial-gradient(farthest-corner circle at center, #21272D, #17191B);
     border-radius: 3px;
     opacity: 0;
